# darknet-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  libdarknet.pc.make
cfg/: gru.cfg  yolo.cfg  yolov2.cfg
cmake/: select_compute_arch.cmake
cpp_interface/: Makefile  darknet_proxy.cpp  darknet_proxy.h  test.cpp
darknet/: Makefile  README.md
darknet/examples/: detector.c  segmenter.c
darknet/src/: box.c  connected_layer.c  data.c  demo.c  option_list.c
darknet_cpp/: CMakeLists.txt  Makefile  darknet.hpp  detector.cpp  detector.hpp  image.cpp  image.hpp  image_overlay.cpp  image_overlay.hpp  libdarknet_cpp.pc.make  logging.hpp  test.cpp  utils.cpp  utils.hpp
darknet_cpp/examples/: CMakeLists.txt  darknet_cpp_detection.cpp  darknet_cpp_detection_threaded.cpp  darknet_cpp_jetson_detection.cpp
darknet_cpp/src/: CMakeLists.txt  convert_cv.hpp  convert_cv_bgr8.cpp  convert_cv_bgr8.hpp  darknet.hpp  detection.hpp  detector.cpp  detector.hpp  image.cpp  image.hpp  logging.hpp  utils.cpp  utils.hpp
examples/: CMakeLists.txt  darknet_cpp_detection.cpp  darknet_cpp_jetson_detection.cpp  detector.c  segmenter.c
include/: darknet.h
matlab/: Annotations2Dollar.m  Dollar2Yolo.m  draw_training_information.m
python/: CMakeLists.txt  darknet.py  setup.py.in
python/darknet/: __init__.py
scripts/: Readme.md  VOC2YOLO.py  png2jpg.sh
scripts/ShowAnnotations/: OpenXml.cpp  OpenXml.h  ShowAnnotations.pro  main.cpp
src/: CMakeLists.txt  blas.h  blas_kernels.cu  convert_cv_bgr8.cpp  convolutional_layer.c  data.c  demo.c  detector.c  detector.cpp  detector.hpp  frame_grabber.c  frame_grabber.h  gru_layer.c  image.c  image.h  lstm_layer.c  parser.c  region_layer.c  utils.c  utils.h
